Added new name and app icon

--- a/app.json
+++ b/app.json
@@ -1,13 +1,13 @@
 {
   "expo": {
-    "name": "Assignment01",
+    "name": "Cart Picker",
     "slug": "Assignment01",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/icons8-app-64.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/icons8-app-64.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
